Update the menu image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <img src="WhatsApp Image 2022-01-30 at 12.59.14 PM.jpeg" alt="Menu image">
+        <img src="Main_Img.jpg" alt="Menu image">
     </div>
 
 </body>
